[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/mob/mob1/slime.gd" type="Script" id=1]
[ext_resource path="res://assets/slime/die/2.png" type="Texture" id=2]
[ext_resource path="res://assets/slime/die/3.png" type="Texture" id=3]
[ext_resource path="res://assets/slime/die/1.png" type="Texture" id=4]
[ext_resource path="res://assets/slime/idle/1.png" type="Texture" id=5]
[ext_resource path="res://assets/slime/move/3.png" type="Texture" id=6]
[ext_resource path="res://assets/slime/move/4.png" type="Texture" id=7]
[ext_resource path="res://assets/slime/idle/3.png" type="Texture" id=8]
[ext_resource path="res://assets/slime/die/4.png" type="Texture" id=9]
[ext_resource path="res://assets/slime/die/6.png" type="Texture" id=10]
[ext_resource path="res://assets/slime/idle/4.png" type="Texture" id=11]
[ext_resource path="res://assets/slime/move/2.png" type="Texture" id=12]
[ext_resource path="res://assets/slime/move/1.png" type="Texture" id=13]
[ext_resource path="res://assets/slime/idle/2.png" type="Texture" id=14]
[ext_resource path="res://assets/slime/die/5.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 14 ), ExtResource( 8 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 10 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 25.0147
height = 28.3453

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 44.425, 30.0887 )

[node name="slime" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -3.85754, -34.3768 )
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
animation = "die"
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.4171, -34.4895 )
rotation = 1.5708
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="slime" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="slime"]
position = Vector2( -1.98424, -34.9229 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Label" type="Label" parent="Camera2D"]
margin_left = -42.463
margin_top = -95.2441
margin_right = -0.463013
margin_bottom = -81.2441
text = "Health"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Camera2D"]
margin_left = 2.0
margin_top = -95.0
margin_right = 41.0
margin_bottom = -81.0
text = "10/10"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="slime" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
